[tool.poetry]
name = "tritonserve"
version = "0.0.1"
description = "Local triton deployment python utility"
authors = [
    "Alec Gunny <alec.gunny@ligo.org>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
spython = "^0.1"
tritonclient = {extras = ["all"], version = "^2.18"}

# Poetry unable to find the 1.22.4 package, so just
# setting this constraint for now until it gets
# sorted out. TODO: keep an eye on this
numpy = "<1.22.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.16"
pytest = "^6.2"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''

[tool.isort]
known_first_party = ["tritonserve"]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
